buttons visibility depend on the repair status